--- a/src/app/(mdx)/articles/test1/page.mdx
+++ b/src/app/(mdx)/articles/test1/page.mdx
@@ -1,3 +1,9 @@
+---
+title: Markdown Test
+date: 01/01/2000
+tags: [tag1, tag2]
+---
+
 # <a name="top"></a>Markdown Test Page
 
 - [Headings](#Headings)
