Set up featured posts

--- a/src/app/(mdx)/articles/web-accessibility-crash-course/page.mdx
+++ b/src/app/(mdx)/articles/web-accessibility-crash-course/page.mdx
@@ -3,6 +3,7 @@ title: Web Accessibility Crash Course
 date: 11/02/2023
 tags: 
 image: https://images.unsplash.com/photo-1601445638532-3c6f6c3aa1d6?auto=format&fit=crop&q=80&w=1972&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+isFeatured: true
 ---
 
 # Web Accessibility Crash Course
