--- a/src/app/(mdx)/articles/ui-ux-crash-course/page.mdx
+++ b/src/app/(mdx)/articles/ui-ux-crash-course/page.mdx
@@ -6,4 +6,29 @@ image: https://images.unsplash.com/photo-1558655146-d09347e92766?auto=format&fit
 isFeatured: true
 ---
 
-# UI/UX Crash Course
+# UI/UX Crash Course: A Guide for Developers
+User Interface (UI) and User Experience (UX) design play a critical role in creating websites and applications that are not only visually appealing but also functional and user-friendly. As a developer, enhancing your understanding of UI design can greatly improve the quality of your work. In this crash course, we'll explore some fundamental rules and principles that can help you level up your UI/UX design skills.
+
+## Stick to a Few Font Sizes and Weights
+Consistency in typography is a key element of good design. When it comes to fonts, it's important to keep it simple. Here are some guidelines to follow:
+
+- **Limited Font Sizes:** Stick to a few font sizes throughout your design. Using too many different font sizes can make your design look cluttered and unprofessional. Choose two or three font sizes for headings, subheadings, and body text.
+
+- **Font Weights:** Be consistent with font weights. Mixing bold and regular weights can be effective for creating visual hierarchy, but don't go overboard. Overusing font weights can make your design look chaotic.
+
+## Use 1 or 2 Fonts Max
+While there are countless fonts to choose from, it's usually best to stick to one or two fonts. This maintains a cohesive and harmonious look for your design. Using too many fonts can be distracting and make your website or app appear unpolished. Choose a font that suits your brand and purpose, and consider adding a second font only if you need to create a clear contrast, for example, between headings and body text.
+
+## Establish a Spacing System
+A consistent spacing system can greatly improve the readability and overall aesthetics of your design. Here's how you can go about it:
+
+- **Define a Base Unit:** Choose a base unit for your spacing system. For example, you might set the vertical space between paragraphs as your base unit, let's say 8px.
+
+- **Multiples of the Base Unit:** Use simple multiples of your base unit for spacing. For instance, you can separate headers and paragraphs by 1.5x or 2x, create a 2x horizontal spacing between cards, and maintain button padding as 0.25x vertically and 1x horizontally. This systematic approach ensures a consistent and visually appealing layout throughout your website or app.
+
+- **Test and Refine:** While this is a rough guide, don't be afraid to experiment and make adjustments based on what looks and feels right for your specific project. The key is to maintain consistency.
+
+## Avoid Carousels
+Carousels, those rotating image or content sliders, are a controversial element in UI/UX design. While they may seem visually appealing, they often lead to poor user experiences. Users may not have enough time to fully digest the content or may miss important information as it quickly cycles through. Instead, consider other design elements like static hero images or well-structured content sections that provide a more user-friendly experience.
+
+In addition to these rules, remember that UI/UX design is an evolving field, and it's essential to stay updated with the latest trends and best practices. Don't hesitate to seek feedback and iterate on your designs to continually improve them. Developing your UI/UX skills will not only enhance the aesthetics of your work but also make your websites and applications more intuitive and enjoyable for users. Happy designing!
