Added brief text to projects

--- a/src/app/(mdx)/projects/alm/page.mdx
+++ b/src/app/(mdx)/projects/alm/page.mdx
@@ -8,3 +8,5 @@ image: https://images.unsplash.com/photo-1558655146-d09347e92766?auto=format&fit
 # ALM Prediction
 
 [Obesity Week Poster](https://onlinelibrary.wiley.com/doi/full/10.1002/oby.23626#oby23626-sec-1177)
+
+This is was a research project with LSU Mathematics and Pennington Biomedical Research Center.
