--- a/src/app/(mdx)/projects/flurry/page.mdx
+++ b/src/app/(mdx)/projects/flurry/page.mdx
@@ -6,3 +6,5 @@ image: https://images.unsplash.com/photo-1558655146-d09347e92766?auto=format&fit
 ---
 
 # Flurry
+
+This is a language learning platform.
