--- a/src/app/(mdx)/projects/koreo/page.mdx
+++ b/src/app/(mdx)/projects/koreo/page.mdx
@@ -7,3 +7,5 @@ isFeatured: true
 ---
 
 # Koreo
+
+This is a Just Dance-style game that uses pose estimations to allow players to dance to any YouTube video.
