--- a/src/app/(mdx)/projects/parallel/page.mdx
+++ b/src/app/(mdx)/projects/parallel/page.mdx
@@ -7,3 +7,5 @@ isFeatured: true
 ---
 
 # Parallel
+
+This is a platform where educators can connect with content creators to create better online educational videos.
