--- a/src/app/(mdx)/projects/violet/page.mdx
+++ b/src/app/(mdx)/projects/violet/page.mdx
@@ -7,4 +7,4 @@ image: https://images.unsplash.com/photo-1558655146-d09347e92766?auto=format&fit
 
 # Violet
 
-An attempt at making Haskell's type system as simple and approachable as TypeScript's
+An attempt at making Haskell's type system as simple and approachable as TypeScript.
