--- a/src/app/(mdx)/articles/web-accessibility-crash-course/page.mdx
+++ b/src/app/(mdx)/articles/web-accessibility-crash-course/page.mdx
@@ -69,7 +69,7 @@ Meta tags play a crucial role in web accessibility:
 
 - **`title` and `alt` attributes**: Provide descriptive `title` attributes for page titles and `alt` attributes for images to give context to non-visual users.
 
-- **`meta name="viewport"`: Include a viewport meta tag to make your web pages responsive and mobile-friendly.
+- **`meta name="viewport"`**: Include a viewport meta tag to make your web pages responsive and mobile-friendly.
 
 ## Testing and User Feedback
 
