--- a/src/app/(home)/about/page.mdx
+++ b/src/app/(home)/about/page.mdx
@@ -1,19 +1,42 @@
+import { BadgeList } from "~/app/components/mdx/badge-list";
+import { BannerImage } from "~/app/components/mdx/banner-image";
+
+<BannerImage src="/images/silk-moth.webp" className="mb-10" />
+
 # About
 
 Hello, I'm Zeke Abshire, a **full-stack software engineer** from South West Louisiana. With dual bachelor's degrees in Computer Science and Mathematics from LSU, I'm deeply passionate about modern web development, design systems, and web accessibility.
 
-My coding philosophy revolves around the elegance of simplicity. I specialize in **Next.js**, **Tailwind**, and **Radix UI** (and now **Shadcn UI**) to create efficient and visually appealing software. When it comes to mentoring, I'm a firm believer in letting individuals explore, make their own mistakes, and learn from them. It's a method that fosters genuine growth in software development.
+My coding philosophy revolves around the elegance of simplicity. I specialize in creating performant, accessible, and visually appealing web and mobile apps.
 
-Beyond my usual work, I channel my creativity into game development, leveraging my background in digital art and music. I'm also an enthusiastic language learner, having dabbled in French since childhood and now venturing into the world of East Asian languages.
+Beyond my usual work, I like to channel my creativity into game development, leveraging my background in digital art and music. I'm also an enthusiastic language learner, having dabbled in French since childhood and now venturing into the world of East Asian languages.
 
-Feel free to delve into my projects and articles, and connect with me for conversations on technology, creativity, and education.
+Feel free to dig through my projects and articles, and connect with me for conversations on technology, creativity, accessibility, and education.
 
 ## Skills
 
-## Experience
-
-- Vigilus
-- Vigilus internship
-- NRL internship
+<BadgeList
+  badges={[
+    "TypeScript",
+    "Python",
+    "Dart",
+    "C#",
+    "Java",
+    "React.js",
+    "Next.js",
+    "Flutter",
+    "React Native",
+    "TailwindCSS",
+    "tRPC",
+    "PyTorch",
+    "Data science",
+    "Figma",
+  ]}
+/>
 
 ## Education
+
+Louisiana State University:
+
+- _B.S. in Computer Science_
+- _B.S. in Mathematics_
