--- a/src/app/(mdx)/projects/flurry/page.mdx
+++ b/src/app/(mdx)/projects/flurry/page.mdx
@@ -1,8 +1,10 @@
 ---
 title: Flurry
 date: 11/02/2023
-tags: 
+tags:
 image: https://images.unsplash.com/photo-1558655146-d09347e92766?auto=format&fit=crop&q=80&w=1964&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+order: 50
+hidden: true
 ---
 
 # Flurry
