--- a/src/app/(home)/about/page.mdx
+++ b/src/app/(home)/about/page.mdx
@@ -5,13 +5,11 @@ import { BannerImage } from "~/app/components/mdx/banner-image";
 
 # About
 
-Hello, I'm Zeke Abshire, a **full-stack software engineer** from South West Louisiana. With dual bachelor's degrees in Computer Science and Mathematics from LSU, I'm deeply passionate about modern web development, design systems, and web accessibility.
-
-My coding philosophy revolves around the elegance of simplicity. I specialize in creating performant, accessible, and visually appealing web and mobile apps.
+Hello, I'm Zeke Abshire, a **full-stack software engineer** from Louisiana. With dual bachelor's degrees in Computer Science and Mathematics from LSU, I'm deeply passionate about modern web development, design systems, and accessibility.
 
 Beyond my usual work, I like to channel my creativity into game development, leveraging my background in digital art and music. I'm also an enthusiastic language learner, having dabbled in French since childhood and now venturing into the world of East Asian languages.
 
-Feel free to dig through my projects and articles, and connect with me for conversations on technology, creativity, accessibility, and education.
+Feel free to dig through my [projects](/projects) and [articles](/articles), and connect with me for conversations on technology, creativity, accessibility, and education.
 
 ## Skills
 
