Started updating the root source page designs

--- a/src/app/(mdx)/projects/(posts)/parallel/page.mdx
+++ b/src/app/(mdx)/projects/(posts)/parallel/page.mdx
@@ -4,6 +4,7 @@ date: 11/10/2023
 tags: [Full-stack, Next.js, Tailwind, Prisma, MySQL, tRPC]
 image: /images/posts/parallel.webp
 order: 10
+featured: true
 ---
 
 # Revolutionizing Educational Content Creation with Parallel
