--- a/src/app/(mdx)/projects/(posts)/dropnote/page.mdx
+++ b/src/app/(mdx)/projects/(posts)/dropnote/page.mdx
@@ -1,10 +1,11 @@
 ---
 title: DropNote
 date: 11/12/2023
-tags: [Mobile app, Flutter, Firebase, Notion, Agile/Scrum]
+tags: [Mobile, Flutter, Firebase, Notion, Agile/Scrum]
 image: /images/posts/dropnote.webp
-order: 20
 ---
+
+View DropNote on [GitHib](https://github.com/zyrrus/dropnote).
 
 # DropNote: Building a File-sharing App for University Professors
 
@@ -24,7 +25,7 @@ The app went through several UI design iterations before we finally settled on t
 
 ### Tech Stack
 
-Given the diverse skill set of our 6-member team, we aimed for familiarity and ease of learning. We settled on Flutter since half the team was familiar with declarative UI frameworks like React/React Native, and all of us were very familiar with object-oriented languages. Firebase was a natural pick for our backend given how well it integrates with Flutter, fortunately, most of us had plenty of experience with Firebase.
+Given the diverse skill set of our 6-member team, we wanted to aim for tools that were mostly familiar and easy to pick up. We settled on Flutter since half the team was familiar with declarative UI frameworks like React/React Native, and all of us were very familiar with object-oriented languages. Firebase was a natural pick for our backend given how well it integrates with Flutter, fortunately, most of us had plenty of experience with Firebase.
 
 ### Project Success
 
