--- a/src/app/(mdx)/projects/(posts)/parallel/page.mdx
+++ b/src/app/(mdx)/projects/(posts)/parallel/page.mdx
@@ -3,35 +3,32 @@ title: Parallel
 date: 11/10/2023
 tags: [Full-stack, Next.js, Tailwind, Prisma, MySQL, tRPC]
 image: /images/posts/parallel.webp
-order: 10
 featured: true
 ---
+
+View Parallel [live](https://parallel.zyrrus.dev) or on [GitHib](https://github.com/zyrrus/parallel).
 
 # Revolutionizing Educational Content Creation with Parallel
 
 ## Introduction
 
-Parallel addresses the gap of collaboration between aspiring educational content creators and educators. The platform facilitates a collaborative space, where educators contribute their domain knowledge, and content creators bring concepts to life through animations and visualizations, fostering the creation of high-quality educational content.
+Parallel addresses the gap of collaboration between aspiring educational content creators and educators. The platform facilitates a collaborative space, where educators contribute their domain knowledge, and content creators bring concepts to life through animations and visualizations, fostering the creation of high-quality educational videos.
 
 ## Development
 
 ### Inspiration
 
-The concept behind Parallel found further validation in a key moment during [Grant Sanderson's 3blue1brown podcast](https://youtu.be/SUMLKweFAYk?si=ugfBwlshpvPh-RnL&t=2354). This inspiration solidified the vision to empower educators and content creators to join forces for high-quality educational content.
+The idea behind Parallel found further validation in a moment during [Grant Sanderson's 3blue1brown podcast](https://youtu.be/SUMLKweFAYk?si=ugfBwlshpvPh-RnL&t=2354). This solidified my vision to empower educators and content creators to join forces in creating high-quality educational content.
 
-### Technology Stack
+### Technology Stack and Deployment
 
 I wanted to choose a stack that gave me the opportunity to explore new tools. The [T3 stack](https://create.t3.gg) (comprising of [Next.js](https://nextjs.org/), [TailwindCSS](https://tailwindcss.com/), [tRPC](https://trpc.io/), [NextAuth](https://next-auth.js.org/), and [Prisma with MySQL](https://www.prisma.io/)) presented an exciting chance to learn cutting-edge technologies mixed in with tools I was already familiar with.
-
-### Deployment
 
 The site was hosted on [Vercel](https://vercel.com), along with [PlanetScale](https://planetscale.com/) for the database. This combination not only provided a robust foundation for development but also ensured scalability and performance.
 
 ## Lessons Learned
 
-- **User-Centric Design:** Understanding the user experience from the very beginning ensures a more intuitive and satisfying interaction for everyone. I constantly aimed to narrow the number of things that the user was able to interact with on any given page.
-
-- **Strategic Technology Choices:** This project would have been substantially more daunting if it weren't for the tools I used. The T3 stack was fully responsible for enabling me, a single developer occasionally working between classes, to...
+- **Strategic Technology Choices:** This project would have been substantially more daunting if it weren't for the tools I used. The T3 stack was fully responsible for enabling me (a solo developer occasionally working between classes) to...
 
   - design the UI,
   - plan out the database models,
@@ -41,8 +38,6 @@ The site was hosted on [Vercel](https://vercel.com), along with [PlanetScale](ht
   - deploy the app.
 
 - **Cost-Effective Scalability:** Vercel and PlanetScale offer incredibly generous free tiers. Parallel is more than ready to scale to tens of thousands of users.
-
-- **Adaptability and Commitment:** Parallel has been around for a while and has been through multiple iterations. (It was actually my first React project, where I ended up using `create-react-app` and Firebase.) Navigating challenges during development requires adaptability and a commitment to the project's vision. Overcoming obstacles contributes not only to project success but also to personal and professional growth.
 
 This was certainly the biggest project I had worked on alone, so, as one would expect, several valuable lessons emerged. The challenges faced, from conceptualization to deployment, offered insights into the intricacies of full-stack development.
 
