--- a/src/app/(mdx)/projects/(posts)/alm/page.mdx
+++ b/src/app/(mdx)/projects/(posts)/alm/page.mdx
@@ -1,12 +1,34 @@
 ---
-title: Appendicular Lean Mass Prediction Using PyTorch
-date: 11/02/2023
-tags: [Python, PyTorch, PyCaret, SKLearn, Numpy, Pandas]
+title: ALM Prediction Using PyTorch
+date: 11/22/2023
+tags: [Data Science, Python, PyTorch, PyCaret, SKLearn, Numpy, Pandas]
 image: /images/posts/alm-pennington.webp
 ---
 
-# ALM Prediction
+# Appendicular Lean Mass Prediction Using PyTorch
 
-[Obesity Week Poster](https://onlinelibrary.wiley.com/doi/full/10.1002/oby.23626#oby23626-sec-1177)
+## Introduction
 
-This is was a research project with LSU Mathematics and Pennington Biomedical Research Center.
+In the summer of 2022, a team of students and researchers from the LSU Math Department embarked on a captivating journey funded by Pennington Biomedical Research Center. The goal of this group was to enhance the findings of [one of Pennington's research papers](https://doi.org/10.1016/j.ajcnut.2023.02.003). We aimed to elevate the accuracy of predicting Appendicular Lean Mass (ALM) using neural networks, a departure from the original study's approach involving least absolute shrinkage and LASSO regression.
+
+## The Team
+
+The team consisted of around five undergraduates and two graduate students led by a postdoc and a professor from the department. Several members of the team had additional concentrations in related fields like computer science, engineering, and biology.
+
+## Methodology
+
+1. **Visualizing and understanding the Data:**
+   Employing visualization tools, such as Matplotlib and Seaborn, helped us gain valuable insights into the dataset.
+
+2. **Data Cleaning and Anomaly Detection:**
+   PyCaret was our primary tool in streamlining anomaly detection and data cleaning processes.
+
+3. **Building the Network with PyTorch:**
+   We constructed a neural network using PyTorch. We almost immediately found promising results, even before optimizing the mode.
+
+4. **Hyperparameter Tuning:**
+   We fine-tuned the model's predictive performance through meticulous hyperparameter optimization.
+
+## Results and Achievements
+
+Continuing our efforts into the Fall, our work received recognition as a featured poster during [Obesity Week](https://onlinelibrary.wiley.com/doi/full/10.1002/oby.23626#oby23626-sec-1177).
