Removed content + added "coming soon" message

--- a/src/app/(mdx)/articles/(posts)/web-accessibility-crash-course/page.mdx
+++ b/src/app/(mdx)/articles/(posts)/web-accessibility-crash-course/page.mdx
@@ -1,18 +1,17 @@
 ---
 title: Web Accessibility Crash Course
 date: 11/02/2023
-tags:
+tags: [Accessibility, Crash course, Guide]
 image: https://images.unsplash.com/photo-1601445638532-3c6f6c3aa1d6?auto=format&fit=crop&q=80&w=1972&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 ---
 
 import { Callout } from "~/app/components/mdx/callout";
 
-<Callout variant="warning">
-  ChatGPT made this up from a super brief outline I gave it.
-</Callout>
+<Callout variant="important">Coming soon!</Callout>
 
 # Web Accessibility Crash Course: A Guide for Developers
 
+{/* 
 Web accessibility is not just a nice-to-have; it's a fundamental aspect of web development that ensures your websites and applications are inclusive and usable for everyone, regardless of their abilities. In this crash course, we'll explore essential concepts and practices to help you make your web projects more accessible.
 
 ## Semantic HTML
@@ -83,4 +82,5 @@ Meta tags play a crucial role in web accessibility:
 
 Don't forget to test your website for accessibility issues. Use tools like the WAVE Accessibility Extension or Lighthouse in Chrome to identify and fix problems. Additionally, consider involving users with disabilities in your testing and seek their feedback to ensure your website or app is truly accessible.
 
-Web accessibility is an ongoing process. By incorporating these practices into your web development workflow, you can create a more inclusive and user-friendly online experience for all. Making your projects accessible isn't just the right thing to do; it's good for your users and your business. Happy coding!
+Web accessibility is an ongoing process. By incorporating these practices into your web development workflow, you can create a more inclusive and user-friendly online experience for all. Making your projects accessible isn't just the right thing to do; it's good for your users and your business. Happy coding! 
+*/}
